torrent_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: torrenttcp
  name: torrenttcp
spec:
  type: NodePort
#  type: LoadBalancer
  ports:
  - port: 9091
    protocol: TCP
    name: web
  - port: 51413
    protocol: TCP
    name: datatcp
  selector:
    app: torrent
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: torrentudp
  name: torrentudp
spec:
  type: NodePort
#  type: LoadBalancer
  ports:
  - port: 51414
    protocol: UDP
    name: dataudp
  selector:
    app: torrent
