torrent_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: torrent
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`torrent.pik8s.home`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: torrenttcp
      port: 9091
